--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,20 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0"
   },
-  "description": ""
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
